--- a/index.html
+++ b/index.html
@@ -1,36 +1,81 @@
-<!doctype html>
-<html lang="en" ng-app="LunchChecker">
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title>Lunch Checker</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles/bootstrap.min.css">
-    <style>
-.message { font-size: 1.3em; font-weight: bold; }
-    </style>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Aquila Tekno Solutions</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap"
+      rel="stylesheet"
+    />
     <script src="js/angular.min.js"></script>
     <script src="js/app.js"></script>
   </head>
-  <body>
-    <div class="container">
-      <h1>Lunch Checker</h1>
 
-      <div ng-controller="LCController">
-        <div class="form-group">
-          <input id="lunch-menu" type="text"
-                                 placeholder="List comma separated dishes you usually have for lunch. Empty items will NOT be included."
-                                 class="form-control"
-                                 ng-model="lunch"
-                                 style="{{inputStyle}}">
+  <body>
+    <header>
+      <nav id="header-nav" class="navbar navbar-default">
+        <div class="container">
+          <div class="navbar-header">
+            <a href="index.html" class="pull-left visible-md visible-lg">
+              <div id="logo-img"></div>
+            </a>
+            <div class="navbar-brand">
+              <a href="login"><h1>Aquila Tekno Solutions</h1></a>
+            </div>
+            <button
+              type="button"
+              class="navbar-toggle collapsed"
+              data-toggle="collapse"
+              data-target="#collapsable-nav"
+              aria-expanded="false"
+            >
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          </div>
+          <div id="collapsable-nav" class="collapse navbar-collapse">
+            <ul id="nav-list" class="nav navbar-nav navbar-right">
+              <li>
+                <a href="#">Sign Up</a>
+              </li>
+              <li>
+                <a href="login.html">Sign In</a>
+              </li>
+              </li>
+            </ul>
+            <!-- #nav-list -->
+          </div>
+          <!-- .collapse .navbar-collapse -->
         </div>
-        <div class="form-group">
-          <button ng-click="checkLunch()" class="btn btn-default">Check If Too Much</button>
-        </div>
-        <div class="form-group message" style="{{messageStyle}}">
-          <!-- Your message can go here. -->
-          {{message}}
-        </div>
+        <!-- .container -->
+      </nav>
+      <!-- #header-nav -->
+    </header>
+    <div id="main-content" class="container">
+      <div class="jumbotron">
+        <img
+          src="images/flyer.png"
+          alt="flyer"
+          class="img-responsive"
+        />
       </div>
     </div>
-
+    <footer class="panel-footer">
+      <div class="container">
+        <div class="text-center">
+          &copy; Copyright Aquila Tekno Solutions 2020
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
