Adjusted brand size.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <div id="logo-img"></div>
             </a>
             <div class="navbar-brand">
-              <a href="login"><h1>Aquila Tekno Solutions</h1></a>
+              <a href="index.html"><h1>Aquila Tekno Solutions</h1></a>
             </div>
             <button
               type="button"
