--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
       href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap"
       rel="stylesheet"
     />
-    <script src="js/angular.min.js"></script>
-    <script src="js/app.js"></script>
   </head>
 
   <body>
@@ -77,5 +75,12 @@
         </div>
       </div>
     </footer>
+    <!-- jQuery (Bootstrap JS plugins depend on it) -->
+    <script src="js/jquery-1.11.3.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/ajax-utils.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/angular.min.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
