--- a/login.html
+++ b/login.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Aquila Tekno Solution</title>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap" rel="stylesheet">
-    <script src=js/angular.min.js></script>
-    <script src=js/app.js></script>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Aquila Tekno Solutions</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -17,80 +22,67 @@
       <nav id="header-nav" class="navbar navbar-default">
         <div class="container">
           <div class="navbar-header">
-            <a href="login.html" class="pull-left visible-md visible-lg">
+            <a href="index.html" class="pull-left visible-md visible-lg">
               <div id="logo-img"></div>
             </a>
-            <!--<div class="navbar-brand">-->
-              <!--<a href="login"><h1>Aquila Tekno Solution</h1></a>-->
-            <!--</div>-->
+            <div class="navbar-brand">
+              <a href="index.html"><h1>Aquila Tekno Solutions</h1></a>
+            </div>
+            <button
+              type="button"
+              class="navbar-toggle collapsed"
+              data-toggle="collapse"
+              data-target="#collapsable-nav"
+              aria-expanded="false"
+            >
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
           </div>
-        </div><!-- .container -->
-      </nav><!-- #header-nav -->
+          <div id="collapsable-nav" class="collapse navbar-collapse">
+            <ul id="nav-list" class="nav navbar-nav navbar-right">
+              <li>
+                <a href="#">Sign Up</a>
+              </li>
+              <li>
+                <a href="login.html">Sign In</a>
+              </li>
+              </li>
+            </ul>
+            <!-- #nav-list -->
+          </div>
+          <!-- .collapse .navbar-collapse -->
+        </div>
+        <!-- .container -->
+      </nav>
+      <!-- #header-nav -->
     </header>
-    $(if chap-id)
-    <form name="sendin" action="$(link-login-only)" method="post">
-      <input type="hidden" name="username" />
-      <input type="hidden" name="password" />
-      <input type="hidden" name="dst" value="$(link-orig)" />
-      <input type="hidden" name="popup" value="true" />
-    </form>
-
-    <script type="text/javascript" src="/md5.js"></script>
-    <script type="text/javascript">
-      <!--
-      function doLogin() {
-    document.sendin.username.value = document.login.username.value;
-    document.sendin.password.value = hexMD5('$(chap-id)' + document.login.password.value + '$(chap-challenge)');
-    document.sendin.submit();
-    return false;
-      }
-      //-->
-    </script>
-    $(endif)
-
-    <div align="center">
-      <a href="$(link-login-only)?target=lv&amp;dst=$(link-orig-esc)">Latviski</a>
+    <div id="main-content" class="container">
+      <div class="jumbotron">
+        <a href="#">
+          <img
+            src="images/flyer.png"
+            alt="flyer"
+            class="img-responsive"
+          />
+        </a>
+      </div>
     </div>
-
-    <table>
-      <tr>
-        <td align="center" valign="middle">
-          <div class="notice" style="color: #c1c1c1; font-size: 9px">Please log on to use the internet hotspot service<br />$(if trial == 'yes')Free trial available, <a style="color: #FF8080"href="$(link-login-only)?dst=$(link-orig-esc)&amp;username=T-$(mac-esc)">click here</a>.$(endif)</div><br />
-          <table width="280" height="280" style="border: 1px solid #cccccc; padding: 0px;" cellpadding="0" cellspacing="0">
-            <tr>
-              <td align="center" valign="bottom" height="175" colspan="2">
-                <form name="login" action="$(link-login-only)" method="post"
-                                                               $(if chap-id) onSubmit="return doLogin()" $(endif)>
-                  <input type="hidden" name="dst" value="$(link-orig)" />
-                  <input type="hidden" name="popup" value="true" />
-
-                  <table width="100" style="background-color: #ffffff">
-                    <tr><td align="right">login</td>
-                      <td><input style="width: 80px" name="username" type="text" value="$(username)"/></td>
-                    </tr>
-                    <tr><td align="right">password</td>
-                      <td><input style="width: 80px" name="password" type="password"/></td>
-                    </tr>
-                    <tr><td>&nbsp;</td>
-                      <td><input type="submit" value="OK" /></td>
-                    </tr>
-                  </table>
-                </form>
-              </td>
-            </tr>
-            <tr><td align="center"><a href="http://www.mikrotik.com" target="_blank" style="border: none;"><img src="/img/logobottom.png" alt="mikrotik" /></a></td></tr>
-          </table>
-
-          <br /><div style="color: #c1c1c1; font-size: 9px">Powered by MikroTik RouterOS</div>
-          $(if error)<br /><div style="color: #FF8080; font-size: 9px">$(error)</div>$(endif)
-        </td>
-      </tr>
-    </table>
-
-    <script type="text/javascript">
-      
-  document.login.username.focus();
-      //
-    </script>
+    <footer class="panel-footer">
+      <div class="container">
+        <div class="text-center">
+          &copy; Copyright Aquila Tekno Solutions 2020
+        </div>
+      </div>
+    </footer>
+    <!-- jQuery (Bootstrap JS plugins depend on it) -->
+    <script src="js/jquery-1.11.3.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/ajax-utils.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/angular.min.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
