--- a/rlogin.html
+++ b/rlogin.html
@@ -1,27 +1,94 @@
-$(if http-status == 302)Hotspot login required$(endif)
-$(if http-header == "Location")$(link-redirect)$(endif)
-<html>
-<!--
-<?xml version="1.0" encoding="UTF-8"?>
-  <WISPAccessGatewayParam
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:noNamespaceSchemaLocation="http://$(hostname)/xml/WISPAccessGatewayParam.xsd">
-    <Redirect>
-	<AccessProcedure>1.0</AccessProcedure>
-	<AccessLocation>$(location-id)</AccessLocation>
-	<LocationName>$(location-name)</LocationName>
-	<LoginURL>$(link-login-only)?target=xml</LoginURL>
-	<MessageType>100</MessageType>
-	<ResponseCode>0</ResponseCode>
-    </Redirect>
-  </WISPAccessGatewayParam>
--->
-<head>
-<title>...</title>
-<meta http-equiv="refresh" content="0; url=$(link-redirect)">
-<meta http-equiv="pragma" content="no-cache">
-<meta http-equiv="expires" content="-1">
-</head>
-<body>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Aquila Tekno Solutions</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header>
+      <nav id="header-nav" class="navbar navbar-default">
+        <div class="container">
+          <div class="navbar-header">
+            <a href="#" class="pull-left visible-md visible-lg">
+              <div id="logo-img"></div>
+            </a>
+            <div class="navbar-brand">
+              <a href="#"><h1>Aquila Tekno Solutions</h1></a>
+            </div>
+            <button
+              type="button"
+              class="navbar-toggle collapsed"
+              data-toggle="collapse"
+              data-target="#collapsable-nav"
+              aria-expanded="false"
+            >
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          </div>
+          <div id="collapsable-nav" class="collapse navbar-collapse">
+            <ul id="nav-list" class="nav navbar-nav navbar-right">
+              <li>
+                <a href="#">Sign Up</a>
+              </li>
+              <li>
+                <a href="login.html">Log In</a>
+              </li>
+              </li>
+            </ul>
+            <!-- #nav-list -->
+          </div>
+          <!-- .collapse .navbar-collapse -->
+        </div>
+        <!-- .container -->
+      </nav>
+      <!-- #header-nav -->
+    </header>
+    <div id="main-content" class="container">
+      <div class="jumbotron">
+          <div class="col-sm-6 col-xs-12">
+            <img
+              src="images/flyer.png"
+              alt="flyer"
+              class="img-responsive"
+            />
+          </div>
+          <div class="col-sm-6 col-xs-12">
+            <img
+              src="images/faq.png"
+              alt="faq"
+              class="img-responsive"
+            />
+          </div>
+      </div>
+    </div>
+    <footer class="panel-footer">
+      <div class="container">
+        <div class="text-center">
+          &copy; Copyright Aquila Tekno Solutions 2020
+        </div>
+      </div>
+    </footer>
+    <!-- jQuery (Bootstrap JS plugins depend on it) -->
+    <script src="js/jquery-1.11.3.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/ajax-utils.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/angular.min.js"></script>
+    <script src="js/app.js"></script>
+  </body>
 </html>
