--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html ng-app="Aquila" lang="en">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,25 +7,25 @@
     <title>Aquila Tekno Solutions</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/styles.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap"
-      rel="stylesheet"
-    />
+    <!--<link-->
+      <!--href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap"-->
+      <!--rel="stylesheet"-->
+    <!--/>-->
+    <!--<link-->
+      <!--href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap"-->
+      <!--rel="stylesheet"-->
+    <!--/>-->
   </head>
-  <body>
+  <body ng-controller="AquilaController">
     <header>
       <nav id="header-nav" class="navbar navbar-default">
         <div class="container">
           <div class="navbar-header">
-            <a href="#" class="pull-left visible-md visible-lg">
+            <a href="rlogin.html" class="pull-left visible-md visible-lg">
               <div id="logo-img"></div>
             </a>
             <div class="navbar-brand">
-              <a href="#"><h1>Aquila Tekno Solutions</h1></a>
+              <a href="rlogin.html"><h1>{{brandName}}</h1></a>
             </div>
             <button
               type="button"
@@ -59,44 +59,50 @@
     </header>
     <div id="main-content" class="container">
       <div class="jumbotron">
-        <div class="col-sm-4 col-xs-12">
-          <div id="free-trial" class="text-center">
-            Contact us for a <span>Free Trial</span>!
+        <div id="login-region" class="col-sm-4 col-xs-12">
+          <div>
+            <div id="free-trial" class="text-center">
+              Contact us for a <span>Free Trial</span>!
+            </div>
+            <div id="login-form">
+              <form
+                name="login"
+                action="$(link-login-only)"
+                method="post"
+                $(if chap-id)
+                onSubmit="return doLogin()"
+                $(endif)
+              >
+                <input type="hidden" name="dst" value="$(link-orig)" />
+                <input type="hidden" name="popup" value="true" />
+                <div id="username">
+                  <div class="text-center">Username:</div>
+                  <div class="username text-center">
+                    <input
+                      class="text-center"
+                      name="username"
+                      type="text"
+                      value="$(username)"
+                    />
+                  </div>
+                  <div class="text-center">Password:</div>
+                  <div class="password text-center">
+                    <input
+                      class="text-center"
+                      name="password"
+                      type="password"
+                    />
+                  </div>
+                  <div id="login-button" class="text-center">
+                    <input type="submit" value="Login" />
+                  </div>
+                </div>
+              </form>
+            </div>
+            $(if error)
+            <div id="error-message" class="text-center">$(error)</div>
+            $(endif)
           </div>
-          <div id="login-form">
-            <form
-              name="login"
-              action="$(link-login-only)"
-              method="post"
-              $(if chap-id)
-              onSubmit="return doLogin()"
-              $(endif)
-            >
-              <input type="hidden" name="dst" value="$(link-orig)" />
-              <input type="hidden" name="popup" value="true" />
-              <div id="username">
-                <div class="text-center">Username:</div>
-                <div class="username text-center">
-                  <input
-                    class="text-center"
-                    name="username"
-                    type="text"
-                    value="$(username)"
-                  />
-                </div>
-                <div class="text-center">Password:</div>
-                <div class="password text-center">
-                  <input class="text-center" name="password" type="password" />
-                </div>
-                <div id="login-button" class="text-center">
-                  <input type="submit" value="Login" />
-                </div>
-              </div>
-            </form>
-          </div>
-          $(if error)
-          <div id="error-message" class="text-center">$(error)</div>
-          $(endif)
         </div>
         <div class="col-sm-4 col-xs-12">
           <img src="images/flyer.png" alt="flyer" class="img-responsive" />
@@ -109,9 +115,7 @@
 
     <footer class="panel-footer">
       <div class="container">
-        <div class="text-center">
-          &copy; Copyright Aquila Tekno Solutions 2020
-        </div>
+        <div class="text-center">&copy; Copyright {{brandName}} 2020</div>
       </div>
     </footer>
 
