--- a/rlogin.html
+++ b/rlogin.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html ng-app="Aquila" lang="en">
   <head>
-    <meta charset="utf-8" />
+    $(if refresh-timeout)
+    <meta http-equiv="refresh" content="$(refresh-timeout-secs)" />
+    $(endif)
+    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+    <meta http-equiv="pragma" content="no-cache" />
+    <meta http-equiv="expires" content="-1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Aquila Tekno Solutions</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/styles.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap"
-      rel="stylesheet"
-    />
+    <!--<link-->
+    <!--href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap"-->
+    <!--rel="stylesheet"-->
+    <!--/>-->
+    <!--<link-->
+    <!--href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap"-->
+    <!--rel="stylesheet"-->
+    <!--/>-->
   </head>
-  <body>
+  <body ng-controller="AquilaController">
     <header>
       <nav id="header-nav" class="navbar navbar-default">
         <div class="container">
           <div class="navbar-header">
-            <a href="#" class="pull-left visible-md visible-lg">
+            <a href="rlogin.html" class="pull-left visible-md visible-lg">
               <div id="logo-img"></div>
             </a>
             <div class="navbar-brand">
-              <a href="#"><h1>Aquila Tekno Solutions</h1></a>
+              <a href="rlogin.html"><h1>{{brandName}}</h1></a>
             </div>
             <button
               type="button"
@@ -48,7 +53,6 @@
               <li>
                 <a href="login.html">Log In</a>
               </li>
-              </li>
             </ul>
             <!-- #nav-list -->
           </div>
@@ -60,34 +64,22 @@
     </header>
     <div id="main-content" class="container">
       <div class="jumbotron">
-          <div class="col-sm-6 col-xs-12">
-            <img
-              src="images/flyer.png"
-              alt="flyer"
-              class="img-responsive"
-            />
-          </div>
-          <div class="col-sm-6 col-xs-12">
-            <img
-              src="images/faq.png"
-              alt="faq"
-              class="img-responsive"
-            />
-          </div>
+        <div class="col-sm-6 col-xs-12">
+          <img src="images/flyer.png" alt="flyer" class="img-responsive" />
+        </div>
+        <div class="col-sm-6 col-xs-12">
+          <img src="images/faq.png" alt="faq" class="img-responsive" />
+        </div>
       </div>
     </div>
     <footer class="panel-footer">
       <div class="container">
-        <div class="text-center">
-          &copy; Copyright Aquila Tekno Solutions 2020
-        </div>
+        <div class="text-center">&copy; Copyright {{brandName}} 2020</div>
       </div>
     </footer>
     <!-- jQuery (Bootstrap JS plugins depend on it) -->
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/ajax-utils.js"></script>
-    <script src="js/script.js"></script>
     <script src="js/angular.min.js"></script>
     <script src="js/app.js"></script>
   </body>
